# simple-storage

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: package.yml  publish.yml  publish_prod.yml  publish_test.yml  test_and_lint.yml
storages/: exceptions.py  provider.py
storages/backends/: amazon_s3.py  aws_s3.py  base.py  file_system.py  google_cloud.py
tests/: test_abstract_storage.py  test_aws_s3_storage.py  test_file_system_storage.py  test_google_cloud_storage.py  test_provider.py  test_storage.py
