[metadata]
name = simple-storage
version = 0.0.6
author = Merixstudio
author_email = code@merixstudio.com
description = File storage made easy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/merixstudio/simple-storage
project_urls =
    Bug Tracker = https://github.com/merixstudio/simple-storage/issues
classifiers =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = storages
packages = find:
python_requires = >=3.6

[options.extras_require]
boto3 =
    boto3 >= 1.4.4
googlecloud =
    google-cloud-storage >= 1.43.0

[options.packages.find]
where = storage
